--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -664,6 +664,8 @@ a:hover {
 
 
 /* SIDEBAR */
+
+
 #sidebar {
 	position: fixed;
 	top: 0;
@@ -1023,27 +1025,176 @@ a:hover {
 #content main .table-data {
 	display: flex;
 	flex-wrap: wrap;
+  flex-direction: column;
 	grid-gap: 24px;
-	margin-top: 24px;
-	width: 100%;
+  margin: 28px auto;
+	width: 80%;
 	color: var(--dark);
 }
 #content main .table-data > div {
-	border-radius: 20px;
+  border-radius: 20px;
 	background: var(--light);
 	padding: 24px;
 	overflow-x: auto;
 }
 #content main .table-data .head {
 	display: flex;
-	align-items: center;
+  flex-direction: column;
+	align-items:flex-start;
 	grid-gap: 16px;
 	margin-bottom: 24px;
 }
+.dashboard-display-heading{
+    margin: auto;
+    text-transform: uppercase;
+    color: #004AAD;
+    text-shadow:0px 2px 6px #423f3f;
+}
+.dashboard-starttext{
+  font-size: 17px;
+    font-weight: 500;
+}
+.dashboard-tud {
+  background: #ebebeb;
+    padding: 64px;
+    border-radius: 20px;
+}
+.dashboard-title{
+  font-size: 24px;
+  padding: 17px 0px;
+}
+.dashboard-username{
+  font-size: 17px;
+}
+.dashboard-description{
+  font-size: 17px;
+}
+.dashboard-start-text{
+    display: inline-block;
+}
+.like-comment{
+  display: flex;
+  flex-wrap: wrap;
+  background: #ebebeb;
+  padding: 8px;
+  border-radius: 20px;
+}
+.comment-section{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  background: #ebebeb;
+  padding: 8px;
+  border-radius: 20px;
+}
+.delete-edit{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0a3c65;
+    width: 20%
+}
+.delete-edit a{
+  text-align: center;
+    width: 50%;
+    color: white;
+}
+.delete-edit-form{
+  width: 64px;
+  width: 50%;
+  padding: 10px 10px;
+  margin: 18px 4px;
+  border-radius: 10px;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  background-color: #3d3d3d;
+  color: white;
+  font-size: 14px;
+}
+.delete-edit-form button{
+  height: 100%;
+  width: 100%;
+  font-size: 1rem;
+  transition: 0.3s;
+  font-style: italic;
+  text-align: center;
+  border: none;
+  /* background: #3d3d3d; */
+  background: none;
+  color: white;
+  transition: 0.3s ease-in;
+}
+.delete-edit-form button:hover{
+  
+  color: rgb(0, 0, 0);
+  
+}
+.delete-edit-form:hover{
+  color: rgb(0, 0, 0);
+  background-color: white; 
+  transition: 0.3s ease-in;
+}
+.single{
+    background: #ffffff;
+    padding: 18px;
+    border-radius: 20px;
+    margin-bottom: 13px;
+    font-size: 15px;
+    font-weight: 500;
+
+}
+.like-comment p{
+  margin-right: 10px;
+}
+textarea{
+  border-radius: 10px;
+    padding: 10px;
+    font-size: 14px;
+    font-style: italic;
+    outline: none;
+    cursor: pointer;
+    resize: none;
+}
+.comment-btn {
+  padding: 10px 10px;
+  margin: 18px 4px;
+  border-radius: 10px;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  background-color: #3d3d3d;
+  color: white;
+  font-size: 14px;
+}
+.comment-btn:hover{
+  color: rgb(0, 0, 0);
+  background-color: white;
+  transition: 0.3s ease-in;
+}
+.blog-comments{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background: #ebebeb;
+  padding: 8px;
+  border-radius: 20px;
+    font-size: 14px;
+    font-style: italic;
+}
+.short-blog-div{
+  text-align: left;
+  background: #ebebeb;
+    padding: 18px;
+    border-radius: 20px;
+
+}
 #content main .table-data .head h3 {
 	margin-right: auto;
-	font-size: 24px;
-	font-weight: 600;
+    font-size: 17px;
+    font-weight: 500;
+    padding: 13px 0px;
 }
 #content main .table-data .head .bx {
 	cursor: pointer;
@@ -1051,7 +1202,7 @@ a:hover {
 
 #content main .table-data .order {
 	flex-grow: 1;
-	flex-basis: 500px;
+	flex-basis: 1000px;
 }
 #content main .table-data .order table {
 	width: 100%;
@@ -1204,8 +1355,176 @@ a:hover {
 	}
 }
 
-/*just for working*/
-.nav-container-color {
-  background: black;
+
+
+/* CREATE BLOG PAGE */
+
+.wrapper{
+  max-width: 826px;
+    width: 100%;
+    background: #fff;
+    margin: 50px auto;
+    box-shadow: 2px 2px 4px rgba(0,0,0,0.125);
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
+.wrapper .title{
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  color:linear-gradient(356deg, #1164a6, #bce2ff);;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.wrapper .form{
+  width: 100%;
+}
+
+.wrapper .form .inputfield{
+  margin-bottom: 25px;
+  display: flex;
+  align-items: center;
+}
+
+.wrapper .form .inputfield label{
+  width: 41px;
+  color: #000000;
+  margin-right: 9px;
+  font-size: 18px;
+}
+
+.wrapper .form .inputfield .input,
+.wrapper .form .inputfield .textarea{
+  width: 100%;
+  outline: none;
+  border: 1px solid #d5dbd9;
+  font-size: 15px;
+  padding: 8px 10px;
+  border-radius: 3px;
+  transition: all 0.3s ease;
+}
+
+.wrapper .form .inputfield .textarea{
+  width: 100%;
+  height: 125px;
+  resize: none;
+}
+
+.wrapper .form .inputfield .custom_select{
+  position: relative;
+  width: 100%;
+  height: 37px;
+}
+
+.wrapper .form .inputfield .custom_select:before{
+  content: "";
+  position: absolute;
+  top: 12px;
+  right: 10px;
+  border: 8px solid;
+  border-color: #d5dbd9 transparent transparent transparent;
+  pointer-events: none;
+}
+
+.wrapper .form .inputfield .custom_select select{
+  -webkit-appearance: none;
+  -moz-appearance:   none;
+  appearance:        none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  border: 0px;
+  padding: 8px 10px;
+  font-size: 15px;
+  border: 1px solid #d5dbd9;
+  border-radius: 3px;
+}
+
+
+.wrapper .form .inputfield .input:focus,
+.wrapper .form .inputfield .textarea:focus,
+.wrapper .form .inputfield .custom_select select:focus{
+  border: 1px solid #fec107;
+}
+
+.wrapper .form .inputfield p{
+   font-size: 14px;
+   color: #757575;
+}
+.wrapper .form .inputfield .check{
+  width: 15px;
+  height: 15px;
+  position: relative;
+  display: block;
+  cursor: pointer;
+}
+.wrapper .form .inputfield .check input[type="checkbox"]{
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+.wrapper .form .inputfield .check .checkmark{
+  width: 15px;
+  height: 15px;
+  border: 1px solid #fec107;
+  display: block;
+  position: relative;
+}
+.wrapper .form .inputfield .check .checkmark:before{
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 2px;
+  width: 5px;
+  height: 2px;
+  border: 2px solid;
+  border-color: transparent transparent #fff #fff;
+  transform: rotate(-45deg);
+  display: none;
+}
+.wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark{
+  background: #fec107;
+}
+
+.wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark:before{
+  display: block;
+}
+
+.wrapper .form .inputfield .btn{
+  width: 100%;
+   padding: 8px 10px;
+  font-size: 15px; 
+  border: 0px;
+  background: linear-gradient(356deg, #1164a6, #bce2ff);
+  color: #fff;
+  cursor: pointer;
+  border-radius: 3px;
+  outline: none;
+}
+
+.wrapper .form .inputfield .btn:hover{
+  background: linear-gradient(356deg, #1164a6, #bce2ff);
+}
+
+.wrapper .form .inputfield:last-child{
+  margin-bottom: 0;
+}
+
+@media (max-width:420px) {
+  .wrapper .form .inputfield{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .wrapper .form .inputfield label{
+    margin-bottom: 5px;
+  }
+  .wrapper .form .inputfield.terms{
+    flex-direction: row;
+  }
+}
