--- a/views/user-content/dashboard.hbs
+++ b/views/user-content/dashboard.hbs
@@ -1,5 +1,3 @@
-
-
 <!-- SIDEBAR -->
 <section id="sidebar">
   <div class="user-nav-left">
@@ -96,78 +94,93 @@
 
       <div class="order">
         <div class="head">
-          <h3>Most Liked</h3>
+          <h3 class="dashboard-display-heading">Most Liked</h3>
 
-          <h3
-            class="user-blog-creator"
-          >Username:{{firstTwoObj.0.creatorName}}</h3>
-          <h2 class="user-blog-title">Title:{{firstTwoObj.0.title}}</h2>
-          <p
-            class="user-blog-description"
-          >Description:{{firstTwoObj.0.description}}</p>
-          <p class="user-blog-likes">Total Likes:{{firstTwoObj.0.likes}}</p>
+          <div class="dashboard-tud">
+            <h2 class="dashboard-title"><span
+                class="dashboard-starttext"
+              ></span>{{firstTwoObj.0.title}}</h2>
+            <h3 class="dashboard-username"><span class="dashboard-starttext">
+                Username:</span>{{firstTwoObj.0.creatorName}}</h3>
+            <p class="dashboard-description"><span
+                class="dashboard-starttext"
+              ></span>{{firstTwoObj.0.description}}</p>
 
+          </div>
+          <div class="like-comment">
+
+            <p class="">Total Likes:{{firstTwoObj.0.likes}}</p>
+            <p class="">Total Comments:{{firstTwoObj.0.totalComments}}</p>
+          </div>
+          <div class="comment-section">
+
+            <h3>Write a comment:</h3>
+            <form
+              action="/user-dashboard/{{firstTwoObj.0.blogId}}"
+              method="POST"
+            >
+              <textarea
+                type="textarea"
+                id="comments"
+                name="comments"
+                rows="4"
+                cols="50"
+                placeholder="write your comment here"
+              ></textarea>
+
+              <button type="submit" class="comment-btn">Create Comment</button>
+            </form>
+          </div>
+          {{#each firstTwoObj.0.comments}}
+            <p class="blog-comments">Comments: {{this}}</p>
+          {{/each}}
         </div>
 
       </div>
 
       <div class="order">
         <div class="head">
-          <h3>Second Most Liked</h3>
-          <h3
-            class="user-blog-creator"
-          >Username:{{firstTwoObj.1.creatorName}}</h3>
-          <h2 class="user-blog-title">Title:{{firstTwoObj.1.title}}</h2>
-          <p
-            class="user-blog-description"
-          >Description:{{firstTwoObj.1.description}}</p>
-          <p class="user-blog-likes">Total Likes:{{firstTwoObj.1.likes}}</p>
+          <h3 class="dashboard-display-heading">Second Most Liked</h3>
+
+          <div class="dashboard-tud">
+            <h2 class="user-blog-title">Title:{{firstTwoObj.1.title}}</h2>
+            <h3
+              class="user-blog-creator"
+            >Username:{{firstTwoObj.1.creatorName}}</h3>
+            <p
+              class="user-blog-description"
+            >Description:{{firstTwoObj.1.description}}</p>
+          </div>
+          <div class="like-comment">
+            <p class="user-blog-likes">Total Likes:{{firstTwoObj.1.likes}}</p>
+            <p class="user-blog-likes">Total Comments:{{firstTwoObj.1.totalComments}}</p>
+
+          </div>
+          <div class="comment-section">
+
+            <h3>Write a comment:</h3>
+            <form
+              action="/user-dashboard/{{firstTwoObj.1.blogId}}"
+              method="POST"
+            >
+              <textarea
+                type="textarea"
+                id="comments"
+                name="comments"
+                rows="4"
+                cols="50"
+                placeholder="write your comment here"
+              ></textarea>
+
+              <button type="submit" class="comment-btn">Create Comment</button>
+            </form>
+          </div>
+          {{#each firstTwoObj.1.comments}}
+            <p class="blog-comments">Comments: {{this}}</p>
+          {{/each}}
         </div>
 
       </div>
     </div>
   </main>
-</section>
-
-<section>
-
-  <div class="user-second-half">
-
-    {{#each firstTwoObj}}
-
-      <div class="user-blog">
-        <h3 class="user-blog-creator">Username:{{this.creatorName}}</h3>
-        <h2 class="user-blog-title">Title:{{this.title}}</h2>
-        <p class="user-blog-description">Description:{{this.description}}</p>
-        <p class="user-blog-likes">Total Likes:{{this.likes}}</p>
-
-    <div class="blog">
-        <h3 class="blog-creator">Username:{{this.creatorName}}</h3>
-        <h2 class="blog-title">Title:{{this.title}}</h2>
-        <p class="blog-description">Description:{{this.description}}</p>
-        <p class="blog-likes">Total Likes:{{this.likes}}</p>
-        {{#each comments}}
-            <p class="blog-comments">Comments: {{this}}</p>
-        {{/each}}
-    </div>
-
-    <h3>Write a comment:</h3>
-    <form action="/user-dashboard/{{this.blogId}}" method="POST">
-        <textarea type="textarea" id="comments" name="comments" rows="4" cols="50" placeholder="write your comment here"></textarea>
-
-    <button type="submit">Create Comment</button>
-    </form>
-      
-
-    {{/each}}
-
-    <div class="user-header-btn">
-      <a href="/explore">Explore More</a>
-    
-
-    <div class="header-btn">
-        <a href="/explore">Explore More</a>
-    </div>
-
-  </div>
 </section>
