--- a/views/user-content/explore-blog.hbs
+++ b/views/user-content/explore-blog.hbs
@@ -150,10 +150,12 @@
         <p class="blog-info-description">
             Description:{{data.entry}}
         </p>
+
         <h3>Likes: {{data.likes}}</h3>
-        <form action="/explore-blog/{{data._id}}" method="POST"></form>
+        <form action="/explore-blog-like/{{data._id}}" method="POST">
           <button type="submit" class="like-btn">Like</button>
         </form>
+        
         <h3>Comments</h3>
             {{#each data}}
                 {{#each comments}}
