--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1072,6 +1072,18 @@ a:hover {
 .dashboard-start-text{
     display: inline-block;
 }
+.dashboard-comment-reverse{
+  display: flex;
+  flex-direction: column-reverse;
+}
+.blog-comments{
+  margin-bottom: 10px;
+  background: #ebebeb;
+  padding: 8px;
+  border-radius: 20px;
+    font-size: 14px;
+    font-style: italic;
+}
 .like-comment{
   display: flex;
   flex-wrap: wrap;
@@ -1173,16 +1185,7 @@ textarea{
   background-color: white;
   transition: 0.3s ease-in;
 }
-.blog-comments{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  background: #ebebeb;
-  padding: 8px;
-  border-radius: 20px;
-    font-size: 14px;
-    font-style: italic;
-}
+
 .short-blog-div{
   text-align: left;
   background: #ebebeb;
@@ -1376,7 +1379,7 @@ textarea{
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 25px;
-  color:linear-gradient(356deg, #1164a6, #bce2ff);;
+  color:#1164a6;
   text-transform: uppercase;
   text-align: center;
 }
@@ -1394,7 +1397,7 @@ textarea{
 .wrapper .form .inputfield label{
   width: 41px;
   color: #000000;
-  margin-right: 9px;
+  margin-right: 15px;
   font-size: 18px;
 }
 
@@ -1441,7 +1444,7 @@ textarea{
   border: 0px;
   padding: 8px 10px;
   font-size: 15px;
-  border: 1px solid #d5dbd9;
+  border: 1px solid #1164a6;
   border-radius: 3px;
 }
 
@@ -1449,7 +1452,7 @@ textarea{
 .wrapper .form .inputfield .input:focus,
 .wrapper .form .inputfield .textarea:focus,
 .wrapper .form .inputfield .custom_select select:focus{
-  border: 1px solid #fec107;
+  border: 1px solid #1164a6;
 }
 
 .wrapper .form .inputfield p{
@@ -1472,7 +1475,7 @@ textarea{
 .wrapper .form .inputfield .check .checkmark{
   width: 15px;
   height: 15px;
-  border: 1px solid #fec107;
+  border: 1px solid #1164a6;
   display: block;
   position: relative;
 }
@@ -1489,7 +1492,7 @@ textarea{
   display: none;
 }
 .wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark{
-  background: #fec107;
+  background: linear-gradient(356deg, #1164a6, #bce2ff);
 }
 
 .wrapper .form .inputfield .check input[type="checkbox"]:checked ~ .checkmark:before{
@@ -1510,6 +1513,27 @@ textarea{
 
 .wrapper .form .inputfield .btn:hover{
   background: linear-gradient(356deg, #1164a6, #bce2ff);
+}
+.create-btn {
+  display: block;
+  width: 100%;
+  height: 50px;
+  outline: none;
+  border: none;
+  background: linear-gradient( #4786bf, #1d0079, #299fb8);
+  background-size: 200%;
+  font-size: 1.1rem;
+  color: #fff;
+  font-family: "Syne";
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin: 1rem 0;
+  cursor: pointer;
+}
+.create-btn:hover {
+  background-position: right;
+  background: linear-gradient(356deg, #1164a6, #bce2ff);
+  transition: 0.5s ease-in;
 }
 
 .wrapper .form .inputfield:last-child{
