--- a/views/user-content/create.hbs
+++ b/views/user-content/create.hbs
@@ -109,13 +109,13 @@
                 <div class="inputfield">
 
                   <label>
-                    <textarea type="textarea" id="entry" name="entry" rows="20" cols="50"
+                    <textarea type="textarea" id="entry" name="entry" rows="30" cols="45"
                       placeholder="write your blog here"></textarea>
                   </label>
                 </div>
 
                 <div class="inputfield">
-                  <button type="submit" class="btn">Create Blog</button>
+                  <button type="submit" class="create-btn">Create Blog</button>
                 </div>
               </div>
             </form>
@@ -127,32 +127,3 @@
     </div>
   </main>
 </section>
-
-{{!--
-<h3>Create </h3>
-<form action="/create-blog" method="POST">
-
-  <label> Title
-    <input type="text" name="title" placeholder="give your blog a title" />
-  </label>
-
-  <label for="topic">Choose a topic</label>
-  <select id="topic" name="topic" required>
-    <option value="" disabled selected>Select Topic</option>
-    {{#each topics}}
-    <option value="{{this}}">{{this}}</option>
-    {{/each}}
-  </select>
-  </label>
-
-  <label> Blog
-    <textarea type="textarea" id="entry" name="entry" rows="4" cols="50" placeholder="write your blog here"></textarea>
-  </label>
-
-  <button type="submit">Create Blog</button>
-
-  {{#if errorMessage}}
-  <p class="error">{{errorMessage}}</p>
-  {{/if}}
-
-</form> --}}
