--- a/views/user-content/blog-detail.hbs
+++ b/views/user-content/blog-detail.hbs
@@ -102,14 +102,10 @@
                     </div>
                     <div class="like-comment">
 
-                        <p class="">Total Likes:{{firstTwoObj.0.likes}}</p>
-                        <p class="">Total Comments:{{firstTwoObj.0.totalComments}}</p>
+                        <p class="">Total Likes:{{totalLikes}}</p>
+                        <p class="">Total Comments:{{totalComments}}</p>
                     </div>
-                    <div class="comment-section">
-                        {{#each blog.comments}}
-                        <h4 class="single">Comments:{{this}}</h4>
-                        {{/each}}
-                    </div>
+                    
                     <div class="comment-section">
 
                         <h3>Write a comment:</h3>
@@ -119,6 +115,11 @@
 
                             <button type="submit" class="comment-btn">Create Comment</button>
                         </form>
+                    </div>
+                    <div class="comment-section">
+                        {{#each blog.comments}}
+                        <h4 class="single">{{this}}</h4>
+                        {{/each}}
                     </div>
                 </div>
 
