--- a/views/user-content/dashboard.hbs
+++ b/views/user-content/dashboard.hbs
@@ -130,9 +130,9 @@
             </form>
           </div>
           <div class="dashboard-comment-reverse">
-
+            {{!-- firstTwoObj.0.comments --}}
             {{#each firstTwoObj.0.comments}}
-              <p class="blog-comments">Comments: {{this}}</p>
+              <p class="blog-comments">{{this}}</p>
             {{/each}}
           </div>
         </div>
@@ -180,7 +180,7 @@
           <div class="dashboard-comment-reverse">
 
             {{#each firstTwoObj.1.comments}}
-              <p class="blog-comments">Comments: {{this}}</p>
+              <p class="blog-comments">{{this}}</p>
             {{/each}}
           </div>
 
