--- a/views/user-content/explore-blog.hbs
+++ b/views/user-content/explore-blog.hbs
@@ -110,7 +110,7 @@
 
             <p>Likes: {{data.likes}}</p>
 
-            <p class="">Total Comments:{{data.totalComments}}</p>
+            <p class="">Total Comments:{{totalComments}}</p>
           </div>
 
           <form action="/explore-blog-like/{{data._id}}" method="POST">
