--- a/views/admin/admin-user.hbs
+++ b/views/admin/admin-user.hbs
@@ -1,4 +1,122 @@
+<!-- SIDEBAR -->
+<section id="sidebar">
+    <div class="user-nav-left">
+        <a href="/user-dashboard"><img src="/images/blogbytes-logo-black.png" alt="" /></a>
+    </div>
+
+    <ul class="side-menu top">
+        <li class="active">
+            <a href="/user-dashboard">
+                <i class="bx bxs-dashboard"></i>
+                <span class="text">Dashboard</span>
+            </a>
+        </li>
+
+    </ul>
+    <ul class="side-menu">
+
+        <li>
+            <a href="/user-logout" class="logout">
+                <i class="bx bxs-log-out-circle"></i>
+                <span class="text">Logout</span>
+            </a>
+        </li>
+    </ul>
+</section>
+<!-- SIDEBAR -->
+
+<!-- CONTENT -->
+<section id="content">
+    <!-- NAVBAR -->
+    <nav>
+        <i class="bx bx-menu"></i>
+        <form action="#">
+            <div class="form-input">
+                <input type="search" placeholder="Search..." />
+                <button type="submit" class="search-btn"><i class="bx bx-search"></i></button>
+            </div>
+        </form>
+        <input type="checkbox" id="switch-mode" hidden />
+        <label for="switch-mode" class="switch-mode"></label>
+
+        <a href="/user-profile" class="profile">
+            <img src="/images/profile.svg" />
+        </a>
+    </nav>
+    <!-- NAVBAR -->
+
+    <!-- MAIN -->
+    <main>
+        <div class="head-title">
+            <div class="left">
+                <h1>Dashboard</h1>
+                <ul class="breadcrumb">
+                    <li>
+                        <a href="#">Dashboard</a>
+                    </li>
+                    <li><i class="bx bx-chevron-right"></i></li>
+                    <li>
+                        <a class="active" href="/user-dashboard">Home</a>
+                    </li>
+                </ul>
+            </div>
+            <a href="#" class="btn-download">
+                <i class="bx bx-user"></i>
+                <span class="text">Welcome {{userInSession.fullname}}</span>
+            </a>
+        </div>
+
+        <ul class="box-info">
+            <li>
+                <i class="bx bxs-like"></i>
+                <span class="text">
+                    <h3>{{totalLikes}}</h3>
+                    <p>Total Likes</p>
+                </span>
+            </li>
+            <li>
+                <i class="bx bxs-comment"></i>
+                <span class="text">
+                    <h3>{{totalComments}}</h3>
+                    <p>Total Comments</p>
+                </span>
+            </li>
+
+
+        </ul>
+
+        <div class="table-data">
+
+            <div class="order">
+                <div class="head">
+
+                    {{#each userData}}
+                    <div class="head">
+                        <div class="short-blog">
+                            {{!-- <a href="/blog-detail/{{this._id}}" class="short-blog-link"> --}}
+                                <div class="short-blog-div">
+                                    <h3 class="blog-topic">Topic:{{this.topic}}</h3>
+                                    <h3 class="blog-name">Title:{{this.title}}</h3>
+
+                                    {{!-- <a href="/explore-blog/{{this._id}}">Read In Detail</a> --}}
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    {{/each}}
+                </div>
+
+            </div>
+
+
+        </div>
+    </main>
+</section>
+
+
+{{!--
 <h2>{{userData.username}}</h2>
 <h2>{{userData.email}}</h2>
 
-<a href="/admin/profile/{{userData._id}}/delete">Delete This Profile</a>
+<a href="/admin/profile/{{userData._id}}/delete">Delete This Profile</a> --}}
